ASSERTION FAILED: hasOverflowingCell == this->hasOverflowingCell() in WebCore::RenderTableSection::computeOverflowFromCells https://bugs.webkit.org/show_bug.cgi?id=155702 <rdar://problem/27720731>

Reviewed by David Hyatt.

Source/WebCore:

The simplified layout path for table/section should also clear the slow path flag for visual overflow (since it recomputes
the overflow for the descendant cells).

Test: fast/table/assert-when-visual-overflow-is-cleared.html

* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::layout):

LayoutTests:

* fast/table/assert-when-visual-overflow-is-cleared-expected.txt: Added.
* fast/table/assert-when-visual-overflow-is-cleared.html: Added.


Canonical link: https://commits.webkit.org/179250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204860 268f45cc-cd09-0410-ab3c-d52691b4dbfc